<resources>
    <string name="app_name">ChoreMate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_emailExt">Email must be a valid @ucsd.edu email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_alphanumeric">Password must contain only
        alphanumeric characters</string>
    <string name="error_invalid_password_length">Password must be at least
        6 characters long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email_list">Please make sure emails are valid and are
        entered in the proper format"</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="row">Row</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="register">register</string>
    <string name="e_mail">e_mail</string>
    <string name="password">password</string>
    <string name="birthdate">birthdate</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="submit">Submit</string>
    <string name="task_view">Tasks</string>
    <string name="transaction_view">Transactions</string>
    <string name="household_view">Household</string>
    <string name="profile_view">Profile</string>
    <string name="profile">Profile</string>
    <string name="users_name">User</string>
    <string name="snooze_notifications">Snooze Notifications</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="title_activity_test_login">Sign in</string>
    <string-array name="time_array">
        <item>1 hour</item>
        <item>1 day</item>
        <item>1 year</item>
        <item>Forever</item>
    </string-array>
    <string name="change_password">Change Password</string>
    <string name="rename_household">Rename Household</string>
    <string name="delete_household">Delete Household</string>
    <string name="invite_housemate">Invite Housemate</string>
    <string name="remove_housemate">Remove Housemate</string>
    <string name="repeat">Repeat every…</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="assign_task">Assign Task</string>
    <string name="recurrence_options">recurrence options</string>
    <string name="due_date">Due Date</string>
    <string name="transaction_history">Transaction History</string>
    <string name="assigned_housemate_name">Assigned Housemate Name</string>
    <string name="household">Household</string>
    <string-array name="recurrence_array">
        <item>day(s)</item>
        <item>week(s)</item>
        <item>month(s)</item>
        <item>year(s)</item>
    </string-array>


</resources>
