<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_tasks"
        android:enabled="true"
        android:icon="@drawable/icon_task"
        android:title="@string/task_view"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_transactions"
        android:enabled="true"
        android:icon="@drawable/icon_transactions"
        android:title="@string/transaction_view"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_household"
        android:enabled="true"
        android:icon="@drawable/icon_group"
        android:title="@string/household_view"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile_view"
        app:showAsAction="always" />
</menu>